--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,8 @@
 <body>
 <div class="container">
   <div class="header">
-    <!--<h2>初级SpringBoot+Shiro小栗子 Node-One</h2>-->
-    <!--<h2>初级SpringBoot+Shiro小栗子 Node-Two</h2>-->
+    <h2>初级SpringBoot+Shiro Node-One</h2>
+    <!--<h2>初级SpringBoot+Shiro Node-Two</h2>-->
   </div>
   <div class="main">
     <div class="left">
